<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <android.support.design.widget.TabLayout
        android:id="@+id/tabLayout_news"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_gravity="top"
        android:fillViewport="false"
        android:background="@drawable/tablayout_background"
        app:tabTextAppearance="@android:style/TextAppearance.Holo.Large"
        app:tabIndicatorColor="@color/tabIndicatorColor"
        app:tabIndicatorHeight="@dimen/tabIndicatorHeight"
        app:tabSelectedTextColor="@color/tabSelectedTextColor"
        app:tabMode="fixed"
        app:layout_scrollFlags="scroll"
        >
        <android.support.design.widget.TabItem
            android:id="@+id/tabItem_top"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/item_tab_toutiao"/>
        <android.support.design.widget.TabItem
            android:id="@+id/tabItem_shehui"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/item_tab_shehui"/>
        <android.support.design.widget.TabItem
            android:id="@+id/tabItem_guonei"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/item_tab_guonei"/>
        <android.support.design.widget.TabItem
            android:id="@+id/tabItem_guoji"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/item_tab_guoji"/>
        <android.support.design.widget.TabItem
            android:id="@+id/tabItem_keji"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/item_tab_keji"/>
    </android.support.design.widget.TabLayout>
    <android.support.v4.view.ViewPager
        android:id="@+id/news_viewPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
    </android.support.v4.view.ViewPager>
</LinearLayout>