<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?actionBarSize"
        android:layout_weight="1"
        android:layout_gravity="center"
        />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/tablayout_background"
        >

        <RadioButton
            android:id="@+id/radio_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:button="@null"
            android:gravity="center"
            android:drawableTop="@mipmap/radio_home_press"
            android:text="@string/radio_home" />

        <RadioButton
            android:id="@+id/radio_news"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:button="@null"
            android:gravity="center"
            android:drawableTop="@mipmap/radio_news"
            android:text="@string/radio_news" />

        <RadioButton
            android:id="@+id/radio_welfare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:button="@null"
            android:gravity="center"
            android:drawableTop="@mipmap/radio_welfare"
            android:text="@string/radio_welfare" />
    </RadioGroup>


</LinearLayout>
