<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:focusable="true"
              android:focusableInTouchMode="true"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:weightSum="1">
    <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ip_inputLayout"
                android:hint="@string/hint_ip">
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_ip"
                    android:cursorVisible="false"
                    android:textColor="@color/primary_text"
                    android:layout_gravity="center_horizontal"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_user"
                android:id="@+id/edit_username">
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary_text"
                    android:layout_gravity="center_horizontal"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:hint="@string/hint_pass"
                android:id="@+id/edit_password" >
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary_text"
                    android:layout_gravity="center_horizontal"/>
        </android.support.design.widget.TextInputLayout>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_filepath"
                android:id="@+id/text_filepath"
                android:textColor="@color/primary_text"
        />
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
                                                    >
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/holo_white"
                    android:id="@+id/text_threadnum"/>
            <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/thread_seekbar"
                    app:dsb_min="1"
                    app:dsb_max="4"
                    app:dsb_value="3"
                    app:dsb_indicatorTextAppearance="?android:attr/textAppearanceMediumInverse"
                    app:dsb_indicatorPopupEnabled="true"
                    />
        </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/ic_download"
        app:fabSize="mini"
        app:elevation="@dimen/evevation"
        app:borderWidth="0dp"
        android:id="@+id/floatingButton"/>
</LinearLayout>